the struggle is real

--- a/views/partials/burgers/burger-block.handlebars
+++ b/views/partials/burgers/burger-block.handlebars
@@ -3,7 +3,7 @@
 		{{burger_name}}
 	</p>
 	<button class="change-devour" data-id="{{id}}" data-newdevour="{{devour}}">
-		{{#if devoured}}Spit Up{{else}}Devour!{{/if}}
+		{{#if devour}}Spit Up{{else}}Devour!{{/if}}
 	</button>
 
 	<button class="delete-burger" data-id="{{this.id}}">Delete!</button>
